k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crock-shop
  labels:
    name: crock-shop
    istio-injection: enabled
